// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecuritySelector component should render properly for collection 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      component="p"
      variant="body2"
    >
      test description for collection
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      displayPrompt={true}
      prompt="test2"
    />
  </WithStyles(ForwardRef(Grid))>
  <Memo(SelectedSecurityPolicyDescription)
    selectedPolicyKey={2}
    title="test3"
  />
</WithStyles(ForwardRef(Grid))>
`;

exports[`SecuritySelector component should render properly for community 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      component="p"
      variant="body2"
    >
      test description for community
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      displayPrompt={true}
      prompt="test2"
    />
  </WithStyles(ForwardRef(Grid))>
  <Memo(SelectedSecurityPolicyDescription)
    selectedPolicyKey={2}
    title="test3"
  />
</WithStyles(ForwardRef(Grid))>
`;

exports[`SecuritySelector component should render properly for record 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      component="p"
      variant="body2"
    >
      test description for record
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <Field
      component={[Function]}
      disabled={false}
      displayPrompt={true}
      prompt="test2"
    />
  </WithStyles(ForwardRef(Grid))>
  <Memo(SelectedSecurityPolicyDescription)
    selectedPolicyKey={2}
    title="test3"
  />
</WithStyles(ForwardRef(Grid))>
`;
